# hse_nis

cats.rs/: test_file_upload.sh  Задание4.txt
cats.rs/cats_mosaic/: Cargo.toml
cats.rs/cats_mosaic/src/: main.rs
evolution.hs/: CHANGELOG.md  LICENSE  evolution-hs.cabal
evolution.hs/app/: Main.hs
family_tree.lua/: family_tree2.lua  input.txt  output.txt
simulation.go/: hello.go
typing_lua/: main.md
